workloads/pg-admin/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pg-admin-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: pgadmin.deepin.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pg-admin
                port:
                  number: 80
  tls:
    - hosts:
        - pgadmin.deepin.me
      secretName: deepin-origin-tls
